--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "express-mysql-session": "^1.2.3",
+    "express-session": "^1.15.6",
     "express-validator": "^5.0.2",
+    "jade": "^1.11.0",
     "morgan": "~1.9.0",
     "mustache": "^2.2.1",
     "mustache-express": "^1.2.2",
