--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "async": "^2.6.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "~1.18.2",
+    "connection": "0.0.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
